[package]
name = "dp"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
dp-a = { alias = "a", problem = "https://atcoder.jp/contests/dp/tasks/dp_a" }
dp-b = { alias = "b", problem = "https://atcoder.jp/contests/dp/tasks/dp_b" }
dp-c = { alias = "c", problem = "https://atcoder.jp/contests/dp/tasks/dp_c" }
dp-d = { alias = "d", problem = "https://atcoder.jp/contests/dp/tasks/dp_d" }
dp-e = { alias = "e", problem = "https://atcoder.jp/contests/dp/tasks/dp_e" }
dp-f = { alias = "f", problem = "https://atcoder.jp/contests/dp/tasks/dp_f" }
dp-g = { alias = "g", problem = "https://atcoder.jp/contests/dp/tasks/dp_g" }
dp-h = { alias = "h", problem = "https://atcoder.jp/contests/dp/tasks/dp_h" }
dp-i = { alias = "i", problem = "https://atcoder.jp/contests/dp/tasks/dp_i" }
dp-j = { alias = "j", problem = "https://atcoder.jp/contests/dp/tasks/dp_j" }
dp-k = { alias = "k", problem = "https://atcoder.jp/contests/dp/tasks/dp_k" }
dp-l = { alias = "l", problem = "https://atcoder.jp/contests/dp/tasks/dp_l" }
dp-m = { alias = "m", problem = "https://atcoder.jp/contests/dp/tasks/dp_m" }
dp-n = { alias = "n", problem = "https://atcoder.jp/contests/dp/tasks/dp_n" }
dp-o = { alias = "o", problem = "https://atcoder.jp/contests/dp/tasks/dp_o" }
dp-p = { alias = "p", problem = "https://atcoder.jp/contests/dp/tasks/dp_p" }
dp-q = { alias = "q", problem = "https://atcoder.jp/contests/dp/tasks/dp_q" }
dp-r = { alias = "r", problem = "https://atcoder.jp/contests/dp/tasks/dp_r" }
dp-s = { alias = "s", problem = "https://atcoder.jp/contests/dp/tasks/dp_s" }
dp-t = { alias = "t", problem = "https://atcoder.jp/contests/dp/tasks/dp_t" }
dp-u = { alias = "u", problem = "https://atcoder.jp/contests/dp/tasks/dp_u" }
dp-v = { alias = "v", problem = "https://atcoder.jp/contests/dp/tasks/dp_v" }
dp-w = { alias = "w", problem = "https://atcoder.jp/contests/dp/tasks/dp_w" }
dp-x = { alias = "x", problem = "https://atcoder.jp/contests/dp/tasks/dp_x" }
dp-y = { alias = "y", problem = "https://atcoder.jp/contests/dp/tasks/dp_y" }
dp-z = { alias = "z", problem = "https://atcoder.jp/contests/dp/tasks/dp_z" }

[[bin]]
name = "dp-a"
path = "src/bin/a.rs"

[[bin]]
name = "dp-b"
path = "src/bin/b.rs"

[[bin]]
name = "dp-c"
path = "src/bin/c.rs"

[[bin]]
name = "dp-d"
path = "src/bin/d.rs"

[[bin]]
name = "dp-e"
path = "src/bin/e.rs"

[[bin]]
name = "dp-f"
path = "src/bin/f.rs"

[[bin]]
name = "dp-g"
path = "src/bin/g.rs"

[[bin]]
name = "dp-h"
path = "src/bin/h.rs"

[[bin]]
name = "dp-i"
path = "src/bin/i.rs"

[[bin]]
name = "dp-j"
path = "src/bin/j.rs"

[[bin]]
name = "dp-k"
path = "src/bin/k.rs"

[[bin]]
name = "dp-l"
path = "src/bin/l.rs"

[[bin]]
name = "dp-m"
path = "src/bin/m.rs"

[[bin]]
name = "dp-n"
path = "src/bin/n.rs"

[[bin]]
name = "dp-o"
path = "src/bin/o.rs"

[[bin]]
name = "dp-p"
path = "src/bin/p.rs"

[[bin]]
name = "dp-q"
path = "src/bin/q.rs"

[[bin]]
name = "dp-r"
path = "src/bin/r.rs"

[[bin]]
name = "dp-s"
path = "src/bin/s.rs"

[[bin]]
name = "dp-t"
path = "src/bin/t.rs"

[[bin]]
name = "dp-u"
path = "src/bin/u.rs"

[[bin]]
name = "dp-v"
path = "src/bin/v.rs"

[[bin]]
name = "dp-w"
path = "src/bin/w.rs"

[[bin]]
name = "dp-x"
path = "src/bin/x.rs"

[[bin]]
name = "dp-y"
path = "src/bin/y.rs"

[[bin]]
name = "dp-z"
path = "src/bin/z.rs"

[dependencies]
num = "=0.2.1"
num-bigint = "=0.2.6"
num-complex = "=0.2.4"
num-integer = "=0.1.42"
num-iter = "=0.1.40"
num-rational = "=0.2.4"
num-traits = "=0.2.11"
num-derive = "=0.3.0"
ndarray = "=0.13.0"
nalgebra = "=0.20.0"
alga = "=0.9.3"
libm = "=0.2.1"
rand = { version = "=0.7.3", features = ["small_rng"] }
getrandom = "=0.1.14"
rand_chacha = "=0.2.2"
rand_core = "=0.5.1"
rand_hc = "=0.2.0"
rand_pcg = "=0.2.1"
rand_distr = "=0.2.2"
petgraph = "=0.5.0"
indexmap = "=1.3.2"
regex = "=1.3.6"
lazy_static = "=1.4.0"
ordered-float = "=1.0.2"
ascii = "=1.0.0"
permutohedron = "=0.2.4"
superslice = "=1.0.0"
itertools = "=0.9.0"
itertools-num = "=0.1.3"
maplit = "=1.0.2"
either = "=1.5.3"
im-rc = "=14.3.0"
fixedbitset = "=0.2.0"
bitset-fixed = "=0.1.0"
proconio = { version = "=0.3.6", features = ["derive"] }
text_io = "=0.1.8"
whiteread = "=0.5.0"
rustc-hash = "=1.1.0"
smallvec = "=1.2.0"

[dev-dependencies]

[features]
local = []

[profile.dev]
opt-level = 3
