[package]
name = "tdpc"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
tdpc-a = { alias = "a", problem = "https://atcoder.jp/contests/tdpc/tasks/tdpc_contest" }
tdpc-b = { alias = "b", problem = "https://atcoder.jp/contests/tdpc/tasks/tdpc_game" }
tdpc-c = { alias = "c", problem = "https://atcoder.jp/contests/tdpc/tasks/tdpc_tournament" }
tdpc-d = { alias = "d", problem = "https://atcoder.jp/contests/tdpc/tasks/tdpc_dice" }
tdpc-e = { alias = "e", problem = "https://atcoder.jp/contests/tdpc/tasks/tdpc_number" }
tdpc-f = { alias = "f", problem = "https://atcoder.jp/contests/tdpc/tasks/tdpc_semiexp" }
tdpc-g = { alias = "g", problem = "https://atcoder.jp/contests/tdpc/tasks/tdpc_lexicographical" }
tdpc-h = { alias = "h", problem = "https://atcoder.jp/contests/tdpc/tasks/tdpc_knapsack" }
tdpc-i = { alias = "i", problem = "https://atcoder.jp/contests/tdpc/tasks/tdpc_iwi" }
tdpc-j = { alias = "j", problem = "https://atcoder.jp/contests/tdpc/tasks/tdpc_ball" }
tdpc-k = { alias = "k", problem = "https://atcoder.jp/contests/tdpc/tasks/tdpc_target" }
tdpc-l = { alias = "l", problem = "https://atcoder.jp/contests/tdpc/tasks/tdpc_cat" }
tdpc-m = { alias = "m", problem = "https://atcoder.jp/contests/tdpc/tasks/tdpc_house" }
tdpc-n = { alias = "n", problem = "https://atcoder.jp/contests/tdpc/tasks/tdpc_tree" }
tdpc-o = { alias = "o", problem = "https://atcoder.jp/contests/tdpc/tasks/tdpc_string" }
tdpc-p = { alias = "p", problem = "https://atcoder.jp/contests/tdpc/tasks/tdpc_eel" }
tdpc-q = { alias = "q", problem = "https://atcoder.jp/contests/tdpc/tasks/tdpc_concatenation" }
tdpc-r = { alias = "r", problem = "https://atcoder.jp/contests/tdpc/tasks/tdpc_graph" }
tdpc-s = { alias = "s", problem = "https://atcoder.jp/contests/tdpc/tasks/tdpc_grid" }
tdpc-t = { alias = "t", problem = "https://atcoder.jp/contests/tdpc/tasks/tdpc_fibonacci" }

[[bin]]
name = "tdpc-a"
path = "src/bin/a.rs"

[[bin]]
name = "tdpc-b"
path = "src/bin/b.rs"

[[bin]]
name = "tdpc-c"
path = "src/bin/c.rs"

[[bin]]
name = "tdpc-d"
path = "src/bin/d.rs"

[[bin]]
name = "tdpc-e"
path = "src/bin/e.rs"

[[bin]]
name = "tdpc-f"
path = "src/bin/f.rs"

[[bin]]
name = "tdpc-g"
path = "src/bin/g.rs"

[[bin]]
name = "tdpc-h"
path = "src/bin/h.rs"

[[bin]]
name = "tdpc-i"
path = "src/bin/i.rs"

[[bin]]
name = "tdpc-j"
path = "src/bin/j.rs"

[[bin]]
name = "tdpc-k"
path = "src/bin/k.rs"

[[bin]]
name = "tdpc-l"
path = "src/bin/l.rs"

[[bin]]
name = "tdpc-m"
path = "src/bin/m.rs"

[[bin]]
name = "tdpc-n"
path = "src/bin/n.rs"

[[bin]]
name = "tdpc-o"
path = "src/bin/o.rs"

[[bin]]
name = "tdpc-p"
path = "src/bin/p.rs"

[[bin]]
name = "tdpc-q"
path = "src/bin/q.rs"

[[bin]]
name = "tdpc-r"
path = "src/bin/r.rs"

[[bin]]
name = "tdpc-s"
path = "src/bin/s.rs"

[[bin]]
name = "tdpc-t"
path = "src/bin/t.rs"

[dependencies]
num = "=0.2.1"
num-bigint = "=0.2.6"
num-complex = "=0.2.4"
num-integer = "=0.1.42"
num-iter = "=0.1.40"
num-rational = "=0.2.4"
num-traits = "=0.2.11"
num-derive = "=0.3.0"
ndarray = "=0.13.0"
nalgebra = "=0.20.0"
alga = "=0.9.3"
libm = "=0.2.1"
rand = { version = "=0.7.3", features = ["small_rng"] }
getrandom = "=0.1.14"
rand_chacha = "=0.2.2"
rand_core = "=0.5.1"
rand_hc = "=0.2.0"
rand_pcg = "=0.2.1"
rand_distr = "=0.2.2"
petgraph = "=0.5.0"
indexmap = "=1.3.2"
regex = "=1.3.6"
lazy_static = "=1.4.0"
ordered-float = "=1.0.2"
ascii = "=1.0.0"
permutohedron = "=0.2.4"
superslice = "=1.0.0"
itertools = "=0.9.0"
itertools-num = "=0.1.3"
maplit = "=1.0.2"
either = "=1.5.3"
im-rc = "=14.3.0"
fixedbitset = "=0.2.0"
bitset-fixed = "=0.1.0"
proconio = { version = "=0.3.6", features = ["derive"] }
text_io = "=0.1.8"
whiteread = "=0.5.0"
rustc-hash = "=1.1.0"
smallvec = "=1.2.0"

[dev-dependencies]

[features]
local = []

[profile.dev]
opt-level = 3
